--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ cover: false
 about: 'about.html'
 ---
 
-<header class="main-header style="background-image: url("/cover.jpg")>
+<header class="main-header" style="background-image: url("/cover.jpg")">
     <nav class="main-nav overlay clearfix">
             {% if page.logo %}
                 <a class="blog-logo" href="{{ site.baseurl }}">
