--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ about: 'about.html'
                     <img src="{{ page.logo }}" alt="Blog Logo" />
                 </a>
             {% endif %}
-        <a class="subscribe-button glyphicon-user" href="{{ site.baseurl }}{{ page.about }}">About Me</a>
+        <a class="subscribe-button" href="{{ site.baseurl }}{{ page.about }}">About Me</a>
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
